# UbiHome

./: .gitignore  .release-please-manifest.json  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Makefile  Native_API.md  README.md  biome.json  build.rs  config.example.yaml  config.yaml  config.yaml.example  dagger.json  not_working.txt  package-lock.json  package.json  release-please-config.json  ruff.toml  test.py  ubihome.code-workspace
.dagger/: package-lock.json  package.json  tsconfig.json
.dagger/src/: index.ts
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-and-test-template.yml  ci.yml  ci_rust.yml  docs.yml  pr-documentation-check.lock.yml  pr-documentation-check.md  release-please.yml  release-pr.yml  release.yml  semantic-release.yml
components/ambient_light/: Cargo.toml
components/ambient_light/src/: lib.rs
components/api/: CHANGELOG.md  Cargo.toml  README.md  build.rs
components/api/src/: lib.rs  parser.rs
components/bluetooth_proxy/: CHANGELOG.md  Cargo.toml  README.md
components/bluetooth_proxy/src/: lib.rs
components/bme280/: CHANGELOG.md  Cargo.toml
components/bme280/src/: lib.rs
components/core/: CHANGELOG.md  Cargo.toml
components/core/src/: binary_sensor.rs  button.rs  constants.rs  event.rs  global_value.rs  lib.rs  light.rs  mapper.rs  number.rs  sensor.rs  sensor_mapper.rs  state.rs  switch.rs  text_sensor.rs  utils.rs  validation.rs
components/core/src/configuration/: automation.rs  base.rs  binary_sensor.rs  button.rs  mod.rs  sensor.rs
components/core/src/features/: ip.rs  mac.rs  mod.rs  self_update.rs
components/core/src/home_assistant/: sensors.rs
components/core/src/internal/: mod.rs  sensors.rs
components/evdev/: CHANGELOG.md  Cargo.toml
components/evdev/src/: lib.rs
components/gpio/: CHANGELOG.md  Cargo.toml
components/gpio/src/: lib.rs
components/icmp_ping/: CHANGELOG.md  Cargo.toml
components/icmp_ping/src/: lib.rs
components/illuminance/: CHANGELOG.md  Cargo.toml
components/illuminance/src/: lib.rs  linux.rs  macos.rs  windows.rs
components/internet/: Cargo.toml
components/internet/src/: lib.rs
components/lambda/: Cargo.toml
components/lambda/src/: lib.rs
components/light/: Cargo.toml
components/light/src/: lib.rs
components/light_sensor/: Cargo.toml  README.md
components/light_sensor/src/: lib.rs
components/mdns/: CHANGELOG.md  Cargo.toml  README.md
components/mdns/src/: lib.rs
components/media_controls/: Cargo.toml
components/media_controls/src/: lib.rs
components/mqtt/: CHANGELOG.md  Cargo.toml
components/mqtt/src/: discovery.rs  lib.rs
components/online/: Cargo.toml
components/online/src/: lib.rs
components/ota/: Cargo.toml
components/ota/src/: lib.rs
components/power_utils/: CHANGELOG.md  Cargo.toml
components/power_utils/src/: lib.rs
components/python/: Cargo.toml  README.md
components/sendspin/: CHANGELOG.md  Cargo.toml
components/sendspin/src/: lib.rs
components/shell/: CHANGELOG.md  Cargo.toml
components/shell/src/: lib.rs
components/web_server/: CHANGELOG.md  Cargo.toml  build.rs
components/web_server/src/: lib.rs
components/web_server/webapp/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
components/web_server/webapp/src/app/: app.component.html  app.component.ts
components/web_server/webapp/src/services/: events.service.ts
documentation/: .gitignore  .invalid-links.txt  Dockerfile  README.md  astro.config.mjs  main.py  mkdocs.yml  old_sitemap.xml  package-lock.json  package.json  tags.yml  tsconfig.json
documentation/components/: generate_encryption_key.html
documentation/docs/: .nav.yml  getting_started.md  index.md
documentation/docs/cli/: index.md
documentation/docs/examples/: index.md  light_sensor_config.yaml
documentation/docs/examples/ambient_light/: windows.yaml
documentation/docs/examples/ambient_light_sensor/: index.md
documentation/docs/examples/automatic_screen_power_control/: index.md  raspberry.yml
documentation/docs/examples/illuminance/: index.md
documentation/docs/features/: index.md
documentation/docs/getting_started/: index.md  linux.yml  macos.yml  windows.yml
documentation/docs/help/: index.md
documentation/src/: content.config.ts
documentation/src/components/: EncryptionKeyGenerator.astro  PageSidebarOverride.astro  PageTitleOverride.astro  SupportedPlatforms.astro
documentation/src/config/: tags-schema.ts
examples/: windows_config.yml
former-filament/: package.json
services/: docker-compose.yml
services/mqtt/: Dockerfile
src/: components.rs  config.rs  constants.rs  lib.rs  logger_setup.rs  main.rs
src/builtins/: globals.rs  mod.rs  template_button.rs  template_number.rs  template_switch.rs
src/builtins/template/: button.rs  lambda.rs  mod.rs  number.rs  switch.rs
src/commands/: mod.rs  run.rs  update.rs
src/commands/un_install/: linux.rs  mod.rs  windows.rs
src/components/shell/: example_config.yaml  shell.rs
src/service/: linux.rs  mod.rs  windows.rs
tests/: .gitignore  README.md  basic_test.py  config11772.yaml  config22336.yaml  config7705.yaml  conftest.py  mock_file.py  pyproject.toml  pytest.ini  ruff.toml  utils.py
tests/api/: __init__.py  authentication_encryption_key_test.py  authentication_password_test.py  binary_sensor_test.py  button_test.py  device_info_test.py  light_test.py  number_test.py  sensor_test.py  switch_test.py  text_sensor_test.py
tests/basic/: basic_test.py  config_multiples_test.py  config_test.py
tests/e2e/: README.md  conftest.py  home_assistant_native_api_e2e_test.py
tests/internal/: filter_test.py  globals_test.py  template_button_test.py  template_number_test.py  template_switch_test.py  trigger_action_test.py
tests/mqtt/: button_test.py  conftest.py  device_info_test.py  mqtt_button_test.py  mqtt_device_info_test.py
vhs/: .gitignore  Dockerfile  README.md  demo.tape  docker-compose.yml  trigger_button.sh
(+126 files in other folders)
