[package]
name = "oshome"
version = "0.4.2"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2021"
description = "OSHome is a system which allows you to integrate any device running an OS into your smart home."
homepage = "https://github.com/DanielHabenicht/OSHome"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.21", features = [ "derive" ] }
rust-embed = "6.8"
log = "0.4"
rumqttc = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
oshome-api = { path = "components/api" }
oshome-bme280 = { path = "components/bme280" }
oshome-core = { path = "components/core" }
oshome-gpio = { path = "components/gpio" }
oshome-mdns = { path = "components/mdns" }
oshome-mqtt = { path = "components/mqtt" }
oshome-shell = { path = "components/shell" }
oshome-web_server = { path = "components/web_server" }
inquire = "0.7.5"
shell_exec = "0.2.0"
flexi_logger = "0.29.8"
directories = "6.0.0"


[build-dependencies]
cargo_toml = "0.22.1"




[target.'cfg(windows)'.dependencies]
windows-service = "0.5"
windows-sys = "0.59"

[workspace]
resolver = "2"
members = ["components/api", "components/bme280", "components/core", "components/evdev", "components/gpio", "components/mdns", "components/mqtt", "components/power_utils", "components/shell", "components/web_server"]
