[package]
name = "ubihome"
version = "0.4.9"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2021"
description = "UbiHome is a system which allows you to integrate any device running an OS into your smart home."
homepage = "https://github.com/DanielHabenicht/UbiHome"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.21", features = [ "derive" ] }
rust-embed = "6.8"
log = "0.4"
rumqttc = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ubihome-api = { path = "components/api" }
# ubihome-bluetooth_proxy = { path = "components/bluetooth_proxy" }
ubihome-bme280 = { path = "components/bme280" }
ubihome-core = { path = "components/core" }
ubihome-gpio = { path = "components/gpio" }
ubihome-mdns = { path = "components/mdns" }
ubihome-mqtt = { path = "components/mqtt" }
ubihome-power_utils = { path = "components/power_utils" }
ubihome-shell = { path = "components/shell" }
ubihome-web_server = { path = "components/web_server" }
inquire = "0.7.5"
shell_exec = "0.2.0"
flexi_logger = "0.29.8"
directories = "6.0.0"
futures-signals = "0.3.34"


[build-dependencies]
cargo_toml = "0.22.1"




[target.'cfg(windows)'.dependencies]
windows-service = "0.5"
windows-sys = "0.59"

[workspace]
resolver = "2"
members = ["components/api", "components/bluetooth_proxy", "components/bme280", "components/core", "components/evdev", "components/gpio", "components/mdns", "components/mqtt", "components/power_utils", "components/shell", "components/web_server"]
