[project]
name = "tests"
version = "0.1.0"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "aioesphomeapi==34.2",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "testcontainers (>=4.10.0,<5.0.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "pytest-timeout (>=2.3.1,<3.0.0)",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
