[project]
name = "tests"
version = "0.1.0"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pytest==9.0",
    "aioesphomeapi==43.13",
    "pytest-asyncio==1.3",
    "testcontainers==4.13.1",
    "paho-mqtt==2.1",
    "pytest-timeout==2.4",
    "pyyaml>=6.0.3",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
