[project]
name = "tests"
version = "0.1.0"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pytest==9.0",
    "aioesphomeapi==43.13",
    "pytest-asyncio==1.3",
    "testcontainers==4.13.1",
    "paho-mqtt==2.1",
    "pyyaml>=6.0.3",
    "platformdirs>=4.9.6",
    "allure-pytest>=2.15.3",
]

[dependency-groups]
e2e = ["pytest-playwright-asyncio>=0.7.2"]
dev = ["ruff>=0.4.0"]

[tool.uv]
package = false
default-groups = ["e2e", "dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
