[package]
name = "oshome-api"
version = "0.3.24"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
oshome-core = { path = "../core" }
serde_yaml = "0.9.34"
duration-str = "0.16.1"
esphome-native-api = "0.0.3"

