[package]
name = "ubihome-api"
version = "0.9.4"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ubihome-core = { path = "../core", features = ["ip"] }
serde_yaml = "0.9.34"
duration-str = "0.16.1"
esphome-native-api = "2.0.2"
# esphome-native-api = {path = "../../../esphome-native-api/"}
whoami = "1.6.0"

