[package]
name = "ubihome-bluetooth_proxy"
version = "0.8.4"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2018"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ubihome-core = { path = "../core" }
serde_yaml = "0.9.34"
btleplug = "0.11.8"
duration-str = "0.16.1"
futures = "0.3.31"
anyhow = "1.0.98"

[target.'cfg(target_os="linux")'.dependencies]
libdbus-sys = { version = "0.2.5", features = ["vendored"] }
