[package]
name = "ubihome-bluetooth_proxy"
version = "0.10.2"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2018"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ubihome-core = { path = "../core" }
serde-saphyr = "0.0.12"
garde = { version = "0.22.1", features = ["serde"] }
# Use as long as https://github.com/deviceplug/btleplug/issues/432 is not resolved
btleplug = { git = "https://github.com/DanielHabenicht/fork.btleplug", rev = "7e2df6f" }
duration-str = "0.16.1"
futures = "0.3.31"
anyhow = "1.0.98"

[target.'cfg(target_os="linux")'.dependencies]
libdbus-sys = { version = "0.2.5", features = ["vendored"] }
