[package]
name = "oshome-gpio"
version = "0.3.4"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2018"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
oshome-core = { path = "../core" }
bme280 = "0.5.1"
linux-embedded-hal = "0.4.0"
