[package]
name = "ubihome-bme280"
version = "0.8.1"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2018"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ubihome-core = { path = "../core" }
serde_yaml = "0.9.34"
duration-str = "0.16.1"

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
bme280 = "0.5.1"
linux-embedded-hal = "0.4.0"
