[package]
name = "ubihome-bme280"
version = "0.10.3"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2018"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ubihome-core = { path = "../core" }
serde-saphyr = { version = "0.0.15", features = ["garde", "miette"] }
garde = { version = "0.22.1", features = ["serde"] }
duration-str = "0.16.1"

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
bme280 = "0.5.1"
linux-embedded-hal = "0.4.0"
