[package]
name = "ubihome-core"
version = "0.7.3"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2024"
description = "Core package"

[features]
mac = ["dep:mac_address"]
ip = ["dep:local-ip-address"]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
duration-str = "0.16.1"
tokio = { version = "1", features = ["full"] }
paste = "1.0.15"
convert_case = "0.8.0"
local-ip-address = {version = "0.6.3", optional = true}
mac_address = { version = "1.1.8", optional = true }
