[package]
name = "ubihome-core"
version = "0.9.3"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2024"
description = "Core package"

[features]
ip = ["dep:network-interface"]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
duration-str = "0.16.1"
tokio = { version = "1", features = ["full"] }
paste = "1.0.15"
convert_case = "0.8.0"
network-interface = { version = "2.0.1", optional = true } 
