[package]
name = "ubihome-evdev"
version = "0.10.3"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ubihome-core = { path = "../core" }
async-trait = "0.1.88"
serde_yaml = "0.9.34"
duration-str = "0.16.1"


[target.'cfg(target_os="linux")'.dependencies]
evdev = "0.13.1"
