[package]
name = "oshome-gpio"
version = "0.3.4"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2018"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
oshome-core = { path = "../core" }
async-trait = "0.1.88"
saphyr = "0.0.3"


[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
rppal = "0.22.1"
