[package]
name = "ubihome-icmp_ping"
version = "0.14.0"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2021"

[dependencies]
duration-str = "0.16.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ubihome-core = { path = "../core", features = ["validation"] }
serde-saphyr = { version = "0.0.26", features = ["garde", "miette"] }
garde = { version = "0.22.1", features = ["serde"] }
