[package]
name = "ubihome-illuminance"
version = "0.10.0"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ubihome-core = { path = "../core" }
serde-saphyr = "0.0.12"
duration-str = "0.16.1"
garde = { version = "0.22.1", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
industrial-io = "0.6.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Devices_Sensors",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }
