[package]
name = "ubihome-lambda"
version = "0.1.0"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ubihome-core = { path = "../core", features = ["validation"] }
tokio = { version = "1", features = ["full"] }
duration-str = "0.16.1"
garde = { version = "0.22.1", features = ["serde"] }
# Pure-Rust JavaScript engine. Chosen over a QuickJS binding so the component
# cross-compiles to every release target (incl. 32-bit ARM musl) with no C
# toolchain or bindgen setup.
boa_engine = "0.20"
