[package]
name = "ubihome-mdns"
version = "0.5.6"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2018"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ubihome-core = { path = "../core" }
libmdns = "0.9"
mdns-sd = "0.13.5"
serde_yaml = "0.9.34"
duration-str = "0.16.1"
mac_address = "1.1.8"
