[package]
name = "ubihome-mdns"
version = "0.10.1"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2018"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ubihome-core = { path = "../core", features = ["ip"] }
libmdns = "0.9"
mdns-sd = "0.13.5"
serde-saphyr = "0.0.12"
duration-str = "0.16.1"
garde = { version = "0.22.1", features = ["serde"] }