[package]
name = "ubihome-media_controls"
version = "0.8.4"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ubihome-core = { path = "../core", features = ["ip"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
duration-str = "0.16.1"
souvlaki = "0.8.2"


[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.44"
features = [
	"Foundation",
	"Media",
	"Win32_Foundation",
	"Win32_System_WinRT",
	"Storage_Streams",
    "Win32_Graphics_Gdi",
	"Win32_System_LibraryLoader",
	"Win32_UI_WindowsAndMessaging"
]