[package]
name = "oshome-mqtt"
version = "0.2.0"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2018"

[dependencies]
log = "0.4"
rumqttc = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
whoami = "1.6.0"
oshome-core = { path = "../core" }
serde_json = "1.0"
