[package]
name = "ubihome-ota"
version = "0.1.0"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
duration-str = "0.16.1"
axum = { version = "0.8.4", features = ["tokio"] }
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
serde-saphyr = { version = "0.0.26", features = ["garde", "miette"] }
garde = { version = "0.22.1", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
ubihome-core = { path = "../core", features = ["validation", "self_update"] }
sha2 = "0.10.9"
subtle = "2.6.1"
hex = "0.4.3"
rand = "0.8"
current_platform = "0.2.0"
