[package]
name = "ubihome-power_utils"
version = "0.9.2"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2024"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ubihome-core = { path = "../core" }
serde_yaml = "0.9.34"
duration-str = "0.16.1"
system_shutdown = "4.0.1"
