[package]
name = "ubihome-sendspin"
version = "0.14.0"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ubihome-core = { path = "../core", features = ["ip"] }
serde-saphyr = { version = "0.0.15", features = ["garde", "miette"] }
duration-str = "0.16.1"
# sendspin = { path = "../../../../DanielHabenicht/fork.sendspin-rs" }
sendspin = { git = "https://github.com/DanielHabenicht/fork.sendspin-rs", rev = "084d7e50ad72bf640d2a51763837be6cb7294942" }
# sendspin = { git = "https://github.com/Sendspin/sendspin-rs", branch = "main" }
uuid = "1.19.0"
tokio-tungstenite = "0.24.0"
# tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
parking_lot = "0.12"
mdns-sd = "0.17.2"
cpal = "0.15.3"
garde = { version = "0.22.1", features = ["serde"] }
