[package]
name = "oshome-shell"
version = "0.3.14"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
shell_exec = "0.2.0"
oshome-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
duration-str = "0.16.1"
serde_yaml = "0.9.34"
