[package]
name = "ubihome-shell"
version = "0.10.2"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
shell_exec = "0.2.0"
ubihome-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
duration-str = "0.16.1"
serde-saphyr = "0.0.12"
garde = { version = "0.22.1", features = ["serde"] }