[package]
name = "ubihome-web_server"
version = "0.6.1"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
axum = "0.7.9"
tower-http = { version = "0.6.1", features = ["timeout", "trace"] }
serde_yaml = "0.9.34"
duration-str = "0.16.1"

ubihome-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
