[package]
name = "ubihome-web_server"
version = "0.8.6"
authors = ["Daniel Habenicht <daniel-habenicht@outlook.de>"]
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.8.4", features = ["tokio"] }
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
serde_yaml = "0.9.34"
duration-str = "0.16.1"

ubihome-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
tokio-stream = "0.1.17"
async-stream = "0.3.6"
